<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SnapPoll</string>

    <string name="nav_drawer_title_polls">Polls</string>
    <string name="nav_drawer_title_profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_submit">Submit Response</string>
    <string name="action_new_poll">New Poll</string>

    <string name="image_description">Image reference from Snap Poll. https://github.com/jinkim608/SnapPoll</string>
    <string name="btn_signout_from_google">Sign out from Google</string>
    <string name="btn_signout_from_facebook">Sign out from Facebook</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <string name="color_picker_default_title">Color Picker</string>

    <string name="facebook_app_id">1013877905305125</string>
    <string name="msg_sign_in_to_see_polls">Please sign in to see your polls</string>
    <string name="session_facebook">facebook</string>
    <string name="msg_logged_in_snappoll">Logged in to SnapPoll.</string>
    <string name="msg_response_submitted">Response submitted</string>
    <string name="msg_poll_created">Poll has been created</string>
    <string name="section_open">Open</string>
    <string name="section_closed">Closed</string>
    <string name="key_view_result_mode">ViewResultMode</string>
    <string name="msg_please_sign_in_to_see_polls">Please sign in to see your polls</string>
    <string name="msg_image_not_selected">Image reference is not selected</string>
    <string name="msg_poll_question_empty">Please enter text in poll question.</string>
    <string name="title_poll_detail">Enter Detail</string>
    <string name="dialog_title_edit_attribute">Edit Attribute</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="dialog_title_new_attributes">New Attribute</string>
    <string name="title_invite_friends">Invite Friends</string>
    <string name="query_hint_search_from_gplus">Search Google+ Friends</string>
    <string name="dialog_title_choose_frineds_gplus">Invite Friends to Poll</string>
    <string name="title_new_poll_image_frag">Select Image</string>
    <string name="key_poll">Poll</string>
    <string name="tag_invited_polls_frag">InvitedPollsFragment</string>
    <string name="tab_title_invited">Invited Polls</string>
    <string name="tab_title_my_polls">My Polls</string>
    <string name="tag_my_polls_frag">MyPollsFragment</string>
    <string name="status_not_signed_in">Not signed in</string>
    <string name="msg_revoked_gplus_access">Revoked Google+ access.</string>
    <string name="key_gplus">gPlus</string>
    <string name="msg_person_info_is_null">Person information is null</string>
    <string name="msg_no_friend_selected">Please select one or more friends to invite</string>
    <string name="msg_poll_id_invalid">Poll id is not valid, please try uploading the poll again</string>
    <string name="key_poll_id">pollId</string>
    <string name="key_show_poll_created_msg">poll_created</string>
    <string name="title_submit_response">Submit a Response</string>
    <string name="title_view_my_poll_result">View My Poll Result</string>
    <string name="msg_response_not_indicated">Please indicate your response on the image.</string>
    <string name="btn_select_all">SELECT ALL</string>
    <string name="btn_unselect_all">UNSELECT ALL</string>
    <string name="lbl_attributes">Answer Choices</string>
    <string name="lbl_new_poll_attributes">Answer Choices (Optional)</string>
    <string name="tag_attr_color">attribute_color</string>
    <string name="color_default_marker">#FF0000</string>
    <string name="msg_poll_invalid">Poll is invalid.</string>
    <string name="msg_signing_in_google">Signing in with Google...</string>
    <string name="msg_loading">Loading...</string>
    <string name="msg_submitting">Submitting...</string>
    <string name="msg_signin_error">Error in login. Please try again.</string>
    <string name="attribute_name_default">Default</string>
    <string name="action_refresh">Refresh</string>
    <string name="lbl_poll_title">Poll Title, Tags (Optional)</string>
    <string name="msg_current_fragment_invalid">Current Fragment is Null.</string>
    <string name="dialog_title_select_image_source">Select Image Source</string>
    <string name="msg_refreshing_list">Refreshing the list ...</string>
    <string name="response_text">%1$s - %2$d response(s)</string>
    <string name="lbl_poll_detail_total_responses">Total Responses: </string>
    <string name="lbl_default_attribute_name">Default Choice</string>
    <string name="lbl_default_numbered_attribute_name">Answer Choice %1$d</string>
    <string name="lbl_section_responded">Responded</string>
    <string name="lbl_section_not_responded">Not Responded Yet</string>

    <!-- ONBOARDING -->
    <string name="key_onboarding_page">onboarding_page</string>
    <string name="lbl_onboarding_welcome">Welcome to</string>
    <string name="btn_onboarding_done">DONE</string>
    <string name="btn_onboarding_skip">SKIP</string>
    <string name="lbl_onboarding_title">SnapPoll Demo!</string>
    <string name="lbl_onboarding_subtitle">Mobile Polling with\nVisual Reference</string>
    <string name="onboarding_page">onboarding_page</string>

    <string name="onboarding_page1_heading">On the main screen</string>
    <string name="onboarding_page1_content">Create a new poll.\n\nSee the list of polls\nfrom you or your friends.</string>
    <string name="onboarding_page2_heading">To create a poll</string>
    <string name="onboarding_page2_content">Select a picture from\nGallery or Camera.\n\nType in your question and send.</string>
    <string name="onboarding_page3_heading">When a friend invited you to a poll</string>
    <string name="onboarding_page3_content">Simply tap on the picture to indicate\nyour response and submit.</string>
    <string name="onboarding_page4_heading">For a poll you created</string>
    <string name="onboarding_page4_content">Check the result from MY POLLS tab</string>
    <string name="onboarding_page5_heading">For more</string>
    <string name="onboarding_page5_content">Open Navigation Drawer\nto access the menu.</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
</resources>
