<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_onboarding_page0_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/lbl_onboarding_welcome"
        android:textSize="26sp"
        android:textColor="@color/text_gray" />

    <ImageView
        android:id="@+id/iv_onboarding_page0_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/tv_onboarding_page0_welcome"
        android:src="@drawable/ic_login_logo" />

    <TextView
        android:id="@+id/tv_onboarding_page0_title"
        android:layout_below="@id/iv_onboarding_page0_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/lbl_onboarding_title"
        android:textSize="28sp"
        android:textColor="@color/text_gray" />

    <TextView
        android:id="@+id/tv_onboarding_page0_subtitle"
        android:layout_below="@id/tv_onboarding_page0_title"
        style="@style/SnapPollOnboardingTextContent"
        android:text="@string/lbl_onboarding_subtitle" />

</LinearLayout>