<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/iv_profile_pic"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_profile_pic"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:visibility="gone" />

        </LinearLayout>

    </RelativeLayout>

    <View style="@style/divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/profile_iv_googleplus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/googleplus" />

        <TextView
            android:id="@+id/profile_tv_status_googleplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/profile_iv_googleplus"
            android:layout_centerVertical="true"
            android:text="Signed in"
            android:textColor="@color/text_green" />

    </RelativeLayout>

    <Button
        android:id="@+id/profile_btn_signout_google"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_signout_from_google"
        android:visibility="visible"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/profile_btn_google_revoke_access"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_revoke_access"
        android:visibility="visible" />


    <View style="@style/divider" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/profile_iv_facebook"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/facebook" />

        <TextView
            android:id="@+id/profile_tv_status_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/profile_iv_facebook"
            android:layout_centerVertical="true"
            android:text="Signed in"
            android:textColor="@color/text_green" />
    </RelativeLayout>

    <Button
        android:id="@+id/profile_btn_signout_facebook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_signout_from_facebook"
        android:visibility="visible"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp" />

    <!--<Button-->
    <!--android:id="@+id/profile_btn_google_revoke_access"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/btn_revoke_access"-->
    <!--android:layout_toRightOf="@id/profile_btn_google_sign_out"-->
    <!--android:visibility="visible" />-->


    <TextView
        android:id="@+id/lbl_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SETTINGS" />

</LinearLayout>